<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/all_places"
            />
        <item
            android:id="@+id/restaurant"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/bar"
            android:icon="@drawable/ic_local_bar_black_24dp"
            android:title="@string/bar" />
        <item
            android:id="@+id/fast_food"
            android:icon="@drawable/ic_local_pizza_black_24dp"
            android:title="@string/fast_food" />
        <item
            android:id="@+id/hotel"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/hotel" />

        <item
            android:id="@+id/cafe"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/cafe" />

    </group>

    <item android:title="Info">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="About" />
        </menu>
    </item>

</menu>
