<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.negute.servicedirectory.ui.AlbergoActivity">

    <ImageView
        android:id="@+id/hero"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true" />


    <TextView
        android:id="@+id/title"
        android:layout_below="@id/hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="8dp"

        android:layout_below="@id/title"
        />

    <TextView
        android:id="@+id/addr"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/addr"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_below="@id/addr"
            android:layout_centerHorizontal="true"
            android:id="@+id/card1"
            android:layout_width="200dp"
            android:layout_height="27dp"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="307dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:text="@string/rooms"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="321dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_chevron_right_black_24dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_below="@id/addr"
            android:layout_centerHorizontal="true"
            android:id="@+id/card2"
            android:layout_width="200dp"
            android:layout_height="27dp"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="307dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:text="@string/facilities"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="321dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_chevron_right_black_24dp" />

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_below="@id/addr"
            android:layout_centerHorizontal="true"
            android:id="@+id/card3"
            android:layout_width="200dp"
            android:layout_height="27dp"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="307dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:text="@string/menu"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="321dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_chevron_right_black_24dp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>
